# open_niumasearch

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  candidate_report.md  pyproject.toml  reference_task.json
REQUIRED/: CLASS.md  DESIGN main.md  REQUIRED.md  agent loop design.md  可观察.md  百炼官方api文档.md
REQUIRED/skills design/: TODO LIST.md
REQUIRED/tool design/: file_system.md  jina_reader.md  ocr_read.md  tool call required.md  web_search.md
prompts/: system.md
scripts/: init_todo_md.py  preflight_network.py  smoke_test_new_tools.py  smoke_tool.py  test_pluggable_tools.py  validate_infra.py  validate_todo_md.py  visualize_tokens.py
skills/: research-todo.md  todo.md  write-todo.md
src/deep_research_agent/: __init__.py  agent.py  cli.py  context_manager.py  dashscope_backend.py  eval.py  logging.py  models.py  multi_agent.py  prompts.py  retrieval_untils.py  session.py  skills.py  tools.py  untils_case.py
src/deep_research_agent/tools/: __init__.py  academic.py  archiver.py  arxiv.py  base.py  core.py  distiller.py  file_system.py  finance.py  fs.py  law_expert.py  mineru.py  pdf.py  plan.py  search.py  serper.py  utils.py  web.py
test_workspace/research/raw/: Test_Page_327c3f.md
tests/: conftest.py  test_agent_dispatch.py  test_agent_loop.py  test_context_manager.py  test_core_robustness.py  test_logging.py  test_multi_agent.py  test_prompts.py  test_session.py  test_skills.py  test_todo_closure_guard.py  test_todo_skill_scripts.py  test_tools.py  test_tools_real_api.py
