[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Minimal deep research agent harness with a ReAct loop and real tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "arxiv>=2.2.0",
  "httpx>=0.27.0",
  "openai>=1.75.0",
  "pymupdf4llm>=0.0.19",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
deep-research-agent = "deep_research_agent.cli:main"
deep-research-agent-eval = "deep_research_agent.eval:main"
deep-research-agent-multi = "deep_research_agent.multi_agent:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "real_api: marks tests that call real external APIs (skipped by default, use --run-real-api to enable)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deep_research_agent"]
